<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="8dp"
    app:cardElevation="16dp"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="4dp"
    app:cardBackgroundColor="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgCardAllCourses"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:cardBackgroundColor="#004064"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgAllCourses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_logoi"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/txtAllCoursesTitle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginVertical="6dp"
            tools:text="@string/txt_cardallctitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgCardAllCourses"
            app:layout_constraintEnd_toStartOf="@id/btnAllCDesc"
            />
        <TextView
            android:id="@+id/txtAllCoursesDesc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/black"
            tools:text="@string/txt_coursedeatial"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/imgCardAllCourses"
            app:layout_constraintEnd_toStartOf="@id/btnAllCDesc"
            app:layout_constraintTop_toBottomOf="@id/txtAllCoursesTitle"
            />
        <ImageButton
            android:id="@+id/btnAllCDesc"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow"
            android:scaleType="fitXY"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_detail_bkg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/btn_gotodesc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>